# Simple3DViewer

./: CMakeLists.txt
include/: Camera.h  D3D12Viewport.h  MainWindow.h  Model.h
resources/: pixel.hlsl  vertex.hlsl
src/: Camera.cpp  D3D12Viewport.cpp  MainWindow.cpp  Model.cpp  main.cpp
